syntax = "proto3";

package product_model;

option go_package="github.com/capslock-inc/grpc-demo;product_model";

service ProductService {
    rpc AddProduct (Product) returns (ProductID);
    rpc GetProduct (ProductID) returns (Product); 
}

message Product {
    string Name = 1;
    string Description = 2;
}

message ProductID{
    string Value = 1;
}